--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser": "~4.3.4",
     "@angular/platform-browser-dynamic": "~4.3.4",
     "@angular/router": "~4.3.4",
+    "@types/socket.io-client": "^1.4.30",
     "@types/ws": "^3.0.2",
     "angular-in-memory-web-api": "~0.3.0",
     "angular-material": "^1.1.5",
